# bach-contrastive-segmentation

./: .gitignore  Dockerfile  README.md  arguments.py  blocks.py  data.py  inference.py  metrics_for_vis.py  model.py  models.py  optimal_threshold_dice.py  plot.py  pyproject.toml  selection.py  test.sh  test_performance.py  train.py  training_progress_vis.R
src/: framework.py  sampling.py
src/data/: __init__.py
src/scripts/: evaluate.py  optimal_threshold_dice.py  train.py
src/util/: events.py  models.py  plot.py
