[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "contrastive-segmentation"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "kornia",
    "matplotlib",
    "numpy",
    "openslide-python",
    "Pillow",
    "pytorch-lightning >= 1.7",
    "scikit-image",
    "scipy",
    "torch",
    "torchvision",
]

[tool.setuptools]
packages = ["src"]

[project.scripts]
train = "src.scripts.train:main"
evaluate = "src.scripts.evaluate:main"
